Added search bar
Converted to Bootstrap 3 (my old CSS pages weren't updated. It explained
a lot, to be honest.)

--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="stylesheet" href="//maxdeviant.com/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/roadrunner.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 
 	<script src="//maxdeviant.com/js/jquery-2.0.3.min.js"></script>
 	<script src="roadrunner.js"></script>
 </head>
 <body>
+	<div class="navbar">
+		<div class="container">
+			<h1>Roadrunner</h1>
+			<form class="navbar-form pull-left" action="">
+				<input id="search" type="text" class="form-control col-lg-4" placeholder="Search">
+			</form>
+		</div>
+	</div>
 	<div class="container">
 		<table class="table">
 			<thead>
