Added header class to <tr> column headers.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="container">
 		<table class="table">
 			<thead>
-				<tr>
+				<tr class="header">
 					<th>#</th>
 					<th>User</th>
 					<th>Status</th>
