--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 
-	<script src="//maxdeviant.com/js/jquery-2.0.3.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="roadrunner.js"></script>
 </head>
 <body>
